# ros-bloom-debhelper

./: .clang-format  .gitignore  .gitmodules  README.md
src/foobar/: CMakeLists.txt
src/foobar/debian/: foobar.service  logrotate  service  service.em  udev
src/foobar/debian/tmp/etc/rsyslog.d/: foobar.conf
src/foobar/etc/rsyslog.d/: 99-foobar.conf.in
src/foobar/src/: main.cpp
src/hello_fail/: CMakeLists.txt  package.xml
src/hello_fail/tests/: HelloFail.cpp
src/my_project/: CMakeLists.txt  config.h.in  package.xml
src/my_project/debian/: TODO.em  control.em  cron.daily.em  cron.hourly.em  logrotate.em  menu.em  postinst  postinst.em  postrm.em  prerm  prerm.em  rules.em  service.em  udev  udev.em
src/my_project/etc/: slug.conf.in
src/my_project/etc/rsyslog.d/: 99-slug.conf.in
src/my_project/launch/: main.launch  main.launch.in
src/my_project/lib/systemd/system/: roscore.service.in
src/my_project/share/applications/: package_name.desktop.in  slug.desktop.in
src/my_project/src/: main.cpp
src/my_project/usr/share/applications/: package_name.desktop.in
src/my_project/usr/share/icons/hicolor/scalable/apps/: package_name.svg.in
src/react_js_sample/: CMakeLists.txt  package.xml
src/react_js_sample/debian/: postinst.em  service.em
src/react_js_sample/etc/: project_name.conf.in
src/react_js_sample/etc/rsyslog.d/: 99-project_name.conf.in
src/react_js_sample/launch/: main.launch.in
