<?xml version="1.0"?>
<package format="2">
  <name>hello_fail</name>
  <version>1.0.0</version>
  <description>A package Neil wanted me to write</description>
  <maintainer email="bryce@rtr.ai">Bryce</maintainer>
  <license>Proprietary</license>

  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>my_project</depend>
  <depend>roscpp</depend>
  <test_depend>rosunit</test_depend>
</package>
