<?xml version="1.0"?>
<package format="2">
  <name>hello_fail</name>
  <version>0.0.1</version>
  <description>A package Neil wanted me to write</description>
  <maintainer email="bryce@rtr.ai">Bryce</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>my_project</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_cmake_gtest</test_depend>
</package>
