<?xml version="1.0"?>
<package format="2">
  <name>my_project</name>
  <version>0.0.1</version>
  <description>the my_project package</description>
  <maintainer email="whoami@example.com">whoami</maintainer>
  <license>BSD</license>
  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
