<?xml version="1.0"?>
<package format="2">
  <name>my_project</name>
  <version>0.0.1</version>
  <description>the my_project package</description>
  <maintainer email="whoami@example.com">whoami</maintainer>
  <license>BSD</license>

  <build_depend>cmake_modules</build_depend>
  <build_depend>libboost-program-options-dev</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <exec_depend>libboost-program-options</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
