<?xml version="1.0"?>
<package format="3">
  <name>my_project</name>
  <version>0.0.1</version>
  <description>the my_project package</description>
  <maintainer email="whoami@example.com">whoami</maintainer>
  <license>BSD</license>

  <build_depend>libboost-program-options-dev</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>libboost-program-options</exec_depend>
</package>
