<?xml version="1.0"?>
<package format="2">
  <name>react_js_sample</name>
  <version>0.0.1</version>
  <description>the react_js_sample package</description>
  <maintainer email="whoami@example.com">whoami</maintainer>
  <license>BSD</license>

  <build_depend>cmake_modules</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
